# jwordlist

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build-front.sh  jwordlist.yaml
back/: Cargo.toml
back/src/: config.rs  error.rs  main.rs  update_dict.rs
back/src/server/: mod.rs
back/src/server/error/: mod.rs
front/: Cargo.toml  build.sh
front/js/: loading.js
front/src/: add_words.rs  display_word_list.rs  js_util.rs  lib.rs  loading.rs  storage.rs
jmdict/: Cargo.toml
jmdict/src/: entry.rs  entry_id.rs  lib.rs
src/: config.rs  main.rs
static/: index.html
