[package]
name = "jwordlist"
version = "0.1.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmdict = { path = "../jmdict", features = ["reader"] }
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
actix-files = "0.1"
futures = "0.1"