[package]
name = "jwordlist"
version = "0.1.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace crates
jmdict = { path = "../jmdict", features = ["reader"] }
# Web server
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
actix-files = "0.1"
actix-rt = "0.2"
futures = "0.1"
# Misc application functionalities
clap = "2.33"
indicatif = "0.12"