[package]
name = "jmdict"
version = "0.1.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]
edition = "2018"

[features]
default = ["reader"]
reader = ["flate2", "quick-xml"]

[dependencies]
flate2 = { version = "1.0", optional = true }
quick-xml = { version = "0.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3"
lazy_static = "1.4"
